--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   --primary-blue: rgb(14, 176, 245);
   --secondary-blue: rgb(0, 72, 250);
   --tertiary-blue: rgb(10, 16, 76);
-  --white: #fff;
+  --clear: rgba(255, 255, 255, 0.891);
   --black: rgba(0, 0, 0, 0.5);
 }
 body {
@@ -22,40 +22,50 @@ body {
   top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-  max-width: 40rem;
-  padding: 1rem;
-  padding-top: 1rem;
+  height: auto;
+  max-width: 50rem;
+  padding-top: 2.4rem;
   border-radius: 1.3rem;
-  color: var(--white);
+  color: var(--clear);
   background-color: var(--black);
 }
-fieldset {
-  padding: 1rem;
-  margin-bottom: -2.5rem;
+.fieldset {
+  padding: 1rem 2rem 0;
 	border: 3px solid var(--primary-blue);
 }
-legend {
+.legend {
   padding: .5rem;
   margin-bottom: 1rem;
 	text-align: center;
+  font-size: 2rem;
 	border-radius: 0.5rem;
 	border: 1px solid var(--primary-blue);
 	background-color: var(--primary-blue);
 }
-label, 
-input {
-  color: var(--white);
+.form-label {
+  font-size: 1.7rem;
+  color: var(--clear);
 }
-
-input:focus {
-  border: 2px solid lime;
+.form-input {
+  font-size: 2rem;
+  color: var(--clear);
+}
+form .form-input:focus {
+  border: 2px solid var(--primary-blue);
+}
+.send-button {
+  width: 100%;
+  margin: 1rem auto 1rem;
+  font-size: 1.8rem;
+  background: var(--primary-blue);
+  border: 2px solid var(--clear);
 }
 
 .username-help-feedback,
 .username-success-feedback,
 .submit-help-feedback,
 .submit-success-feedback {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .username-help-feedback,
